--- a/ClientSide/angular.json
+++ b/ClientSide/angular.json
@@ -24,10 +24,24 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/ionicons/dist/css/ionicons.min.css",
               "src/styles.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "src/assets/css/animate.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/wowjs/dist/wow.js",
+              "src/assets/js/jquery.1.8.3.min.js",
+              "src/assets/js/wow.min.js",
+              "src/assets/js/featherlight.min.js",
+              "src/assets/js/featherlight.gallery.min.js",
+              "src/assets/js/jquery.enllax.min.js",
+              "src/assets/js/jquery.scrollUp.min.js",
+              "src/assets/js/jquery.easing.min.js",
+              "src/assets/js/jquery.stickyNavbar.min.js",
+              "src/assets/js/images-loaded.min.js",
+              "src/assets/js/lightbox.min.js"
+            ]
           },
           "configurations": {
             "production": {
