--- a/ClientSide/package.json
+++ b/ClientSide/package.json
@@ -19,10 +19,16 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
+    "ionicons": "^4.6.3",
+    "jquery": "^3.4.1",
+    "ng2-canvas-whiteboard": "^3.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "waypoints": "^4.0.1",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
