--- a/ClientSide/angular.json
+++ b/ClientSide/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/ionicons/dist/css/ionicons.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css",
@@ -104,6 +105,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -135,6 +137,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ClientSide"
 }
